--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.15",
+    "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
     "dateformat": "^5.0.3",
     "jose": "^5.0.1",
@@ -21,6 +22,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.3",
     "@types/bcrypt": "^5.0.1",
     "@types/dateformat": "^5.0.1",
     "@types/node": "^20",
